# field-decomposition-island

./: CMakeLists.txt  README.md
cmake/include/: field-decomposition-island_setup_package.cmake
cmake/pkg/: fdiConfig.cmake.in
src/: CMakeLists.txt
src/fdi/: data.h  fdi.cpp  fdi.h  fdi.hpp
tests/: CMakeLists.txt  MyDomain.hpp  test_fdi.cpp  test_fdi_tpl.cpp
